--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
+    "@material-ui/core": "^4.11.0",
     "gatsby": "^2.24.26",
     "gatsby-plugin-sass": "^2.3.12",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-hook-form": "^6.3.0"
   },
   "devDependencies": {
     "gatsby-plugin-root-import": "^2.0.5",
