--- a/package.json
+++ b/package.json
@@ -15,13 +15,20 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
+    "@brainhubeu/react-carousel": "^2.0.1",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "gatsby": "^2.24.26",
+    "gatsby-image": "^2.4.14",
     "gatsby-plugin-sass": "^2.3.12",
+    "gatsby-plugin-sharp": "^2.6.25",
+    "gatsby-source-filesystem": "^2.3.24",
+    "gatsby-transformer-sharp": "^2.5.12",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-hook-form": "^6.3.0"
+    "react-hook-form": "^6.3.0",
+    "react-vertical-timeline-component": "^3.0.2"
   },
   "devDependencies": {
     "gatsby-plugin-root-import": "^2.0.5",
