--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
-    "@brainhubeu/react-carousel": "^2.0.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "gatsby": "^2.24.26",
@@ -28,6 +27,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hook-form": "^6.3.0",
+    "react-responsive-carousel": "^3.2.9",
     "react-vertical-timeline-component": "^3.0.2"
   },
   "devDependencies": {
