--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "gatsby-image": "^2.4.14",
     "gatsby-plugin-sass": "^2.3.12",
     "gatsby-plugin-sharp": "^2.6.25",
+    "gatsby-plugin-tslint": "^0.0.2",
+    "gatsby-plugin-typescript": "^2.4.18",
     "gatsby-source-filesystem": "^2.3.24",
     "gatsby-transformer-sharp": "^2.5.12",
     "node-sass": "^4.14.1",
@@ -31,8 +33,16 @@
     "react-vertical-timeline-component": "^3.0.2"
   },
   "devDependencies": {
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
     "gatsby-plugin-root-import": "^2.0.5",
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-loader": "^3.5.4",
+    "tslint-plugin-prettier": "^2.3.0",
+    "tslint-react": "^5.0.0",
+    "typescript": "^4.0.2"
   },
   "repository": {
     "type": "git",
