--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "type-check": "tsc --noEmit",
+    "lint": "npx eslint -c .eslintrc.js --ext .ts src"
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@types/react-vertical-timeline-component": "^3.0.0",
     "gatsby": "^2.24.26",
     "gatsby-image": "^2.4.14",
     "gatsby-plugin-sass": "^2.3.12",
     "gatsby-plugin-sharp": "^2.6.25",
-    "gatsby-plugin-tslint": "^0.0.2",
     "gatsby-plugin-typescript": "^2.4.18",
     "gatsby-source-filesystem": "^2.3.24",
     "gatsby-transformer-sharp": "^2.5.12",
@@ -30,18 +32,19 @@
     "react-dom": "^16.12.0",
     "react-hook-form": "^6.3.0",
     "react-responsive-carousel": "^3.2.9",
+    "react-scripts": "^3.4.3",
     "react-vertical-timeline-component": "^3.0.2"
   },
   "devDependencies": {
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
+    "eslint": "^7.8.1",
+    "eslint-plugin-react": "^7.20.6",
     "gatsby-plugin-root-import": "^2.0.5",
     "prettier": "2.0.5",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-loader": "^3.5.4",
-    "tslint-plugin-prettier": "^2.3.0",
-    "tslint-react": "^5.0.0",
     "typescript": "^4.0.2"
   },
   "repository": {
