--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "eslint-plugin-react": "^7.20.6",
     "gatsby-plugin-root-import": "^2.0.5",
     "prettier": "2.0.5",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "webpack": "^4.44.2"
   },
   "repository": {
     "type": "git",
